force-app/main/default/objects/RTL_Campaign_Member_Status_Mapping__mdt/RTL_Campaign_Member_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Campaign Member Status Mapping</label>
    <pluralLabel>Campaign Member Status Mapping</pluralLabel>
</CustomObject>