force-app/main/default/objects/RTL_Campaign_Member_Status_Mapping__mdt/fields/RTL_Campaign_Catgory__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Catgory__c</fullName>
    <label>Campaign Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Information Update</fullName>
            </value>
            <value>
                <fullName>Invitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>