force-app/main/default/objects/RTL_Campaign_Member_Status_Mapping__mdt/fields/RTL_Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Member_Status__c</fullName>
    <label>Campaign Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Re-attempt</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Unused</fullName>
            </value>
            <value>
                <fullName>Re-contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>