force-app/main/default/objects/RTL_Campaign_Member_Status_Mapping__mdt/fields/RTL_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Contact (Walk-in/Call-in)</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Re-attempt</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Unused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>