force-app/main/default/objects/RTL_Campaign_Member_Status_Mapping__mdt/fields/RTL_Default_Flag__c.field-meta.xml
<CustomField>
    <fullName>RTL_Default_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Flag</label>
    <type>Checkbox</type>
</CustomField>