force-app/main/default/objects/RTL_Campaign_Member_Status_Mapping__mdt/fields/RTL_Offer_Result__c.field-meta.xml
<CustomField>
    <fullName>RTL_Offer_Result__c</fullName>
    <label>Offer Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Interested Some</fullName>
                <isActive>false</isActive>
                <label>Interested Some</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>