force-app/main/default/objects/RTL_Campaign_Member_Status_Mapping__mdt/listViews/All_Rules.listView-meta.xml
<ListView>
    <fullName>All_Rules</fullName>
    <columns>MasterLabel</columns>
    <columns>RTL_Campaign_Catgory__c</columns>
    <columns>RTL_Contact_Status__c</columns>
    <columns>RTL_Offer_Result__c</columns>
    <columns>RTL_Product_Offer_Result__c</columns>
    <columns>RTL_Campaign_Member_Status__c</columns>
    <columns>RTL_Default_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rules</label>
    <language>en_US</language>
</ListView>